# snake-arena-online

./: .dockerignore  .gitignore  Makefile  openapi.yaml  package.json
backend/: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  auth.py  crud.py  db.py  events.py  main.py  models.py  seed.py  store.py  tables.py  util.py
backend/app/routers/: __init__.py  auth.py  games.py  leaderboard.py
backend/tests/: conftest.py  test_auth.py  test_games.py  test_leaderboard.py
backend/tests_integration/: conftest.py  test_full_flow.py
frontend/: .env.production  .gitignore  package-lock.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: routeTree.gen.ts
frontend/src/auth/: AuthContext.tsx
frontend/src/game/: snake.test.ts
frontend/src/routes/: leaderboard.tsx  signup.tsx  spectate.$id.tsx
frontend/src/services/: api.ts  config.ts  index.ts  mock.ts
src/: routeTree.gen.ts
src/components/: AppShell.tsx  SnakeBoard.tsx
src/game/: snake.ts
src/routes/: __root.tsx  index.tsx  login.tsx  spectate.index.tsx
src/services/: index.ts  mock.test.ts  types.ts
