[project]
name = "snake-arena-backend"
version = "0.1.0"
description = "Snake Arena Online backend (FastAPI)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.138.0",
    "pyjwt>=2.13.0",
    "uvicorn[standard]>=0.49.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
]
